# ShooterGame2D

./: CMakeLists.txt  MyProject.sln  README.md  packages.config
MyProject/: Bullet.cpp  Bullet.h  Collision.cpp  Collision.h  GameObject.cpp  GameObject.h  Level.cpp  Level.h  MapParser.cpp  Mapping.cpp  Menu.cpp  MyProject.rc  MyProject.vcxproj  MyProject.vcxproj.filters  Player.cpp  Player.h  Resolver.cpp  Resolver.h  Server.cpp  Server.h  TMXParser.cpp  TMXParser.h  Weapon.cpp  Weapon.h  World.cpp  World.h  main.cpp  mainMenu.cpp  packages.config  resource.h
MyProject/textures/: map1.tmx  map2.1 - Copy.tmx  map2.1.tmx
assets/maps/: TiledMap_1.txt  map.txt  map1.txt  test.txt
src/: main.cpp
src/core/: Mapping.cpp  Mapping.h  Menu.cpp  World.cpp  World.h
src/entities/: Bullet.cpp  Bullet.h  GameObject.cpp  GameObject.h  Player.cpp  Player.h  Weapon.cpp  Weapon.h
src/physics/: Collision.cpp  Collision.h  Resolver.h
src/server/: Server.cpp  Server.h
